Reduced Contact page spacing, fixed form issue causing unwanted sizing, added links to pages in welcome page text.

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ footer::before {
 
 /* --------------------------------------------- Section */
 
-
 section {
     font-family: "Roboto", sans-serif;
     color: #000000;
@@ -106,6 +105,15 @@ section {
 
 .welcomeMessage {
     text-align: center;
+}
+
+.welcomeContainer a {
+    text-decoration: none;
+    color: #000000;
+}
+
+.welcomeContainer a:hover {
+    color: #FFFFFF;
 }
 
 /* --------------------------------------------- About */
@@ -163,21 +171,25 @@ section {
 /* --------------------------------------------- Contact */
 
 .contactContainer {
-    padding: 50px 0;
+    padding: 30px 0;
     font-weight: 300; 
     text-align: center;
 }
 
 .contactEmailPostalContainer {
-    padding: 50px 0;
+    padding: 30px 0;
     font-weight: 300; 
     display: inline-block;
 }
 
-.contactEmail, 
-.contactPostal{
-    padding: 30px 0;
+.contactEmail{
+    padding: 0 0 30px 0;
 }
+
+.contactPostal{
+    padding: 30px 0 0 0;
+}
+
 /* --------------------------------------------- Forms */
 
 .center-form {
